[package]
name = "common"
version = "0.1.0"
edition = "2021"

[features]
mocks = [
    "jf-primitives",
    "mpc-relation",
    "mpc-plonk",
    "ark-ec",
    "ark-poly",
    "k256/expose-field",
    "ecdsa",
]

[dependencies]
# === Cryptography + Arithmetic === #
ark-mpc = { workspace = true }
ark-ec = { version = "0.4", optional = true }
ark-poly = { version = "0.4", optional = true }

ecdsa = { version = "0.16", optional = true }
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
ethers = { workspace = true }
hmac = "0.12"
jf-primitives = { workspace = true, optional = true }
k256 = { version = "0.13", features = ["ecdsa"] }
mpc-plonk = { workspace = true, optional = true }
mpc-relation = { workspace = true, optional = true }
num-bigint = { workspace = true }
num-traits = "0.2"
signature = "2.0"
sha2 = { version = "0.10", features = ["asm"] }

# === Runtime + Networking === #
async-trait = { workspace = true }
crossbeam = { workspace = true }
libp2p = { workspace = true }
libp2p-identity = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# === Workspace Dependencies === #
circuits = { path = "../circuits" }
circuit-types = { path = "../circuit-types" }
constants = { path = "../constants" }
renegade-crypto = { path = "../renegade-crypto" }
util = { path = "../util" }

# === Contracts Repo Dependencies === #
contracts-common = { git = "https://github.com/renegade-fi/renegade-contracts.git" }

# === Misc Dependencies === #
base64 = { version = "0.22" }
bimap = "0.6.2"
derivative = "2.2"
indexmap = { workspace = true }
itertools = "0.10"
lazy_static = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
metrics = { workspace = true }

[dev-dependencies]
rand_core = "0.5"
rand = { workspace = true }
