[package]
name = "config"
version = "0.1.0"
edition = "2024"

[features]
default = []
silent = []

[dependencies]
# === Networking === #
libp2p = { workspace = true }

# === Ethereum === #
alloy = { workspace = true }

# === Workspace Dependencies === #
darkpool-client = { workspace = true }
circuit-types = { workspace = true }
common = { workspace = true }
constants = { workspace = true }
util = { workspace = true }

# === Misc Dependencies === #
base64 = "0.13"
bimap = "0.6.2"
colored = "2.0"
clap = { version = "4.4", features = ["derive", "env"] }
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
json = "0.12"
rand_core = "0.5"
rand = "0.8"
reqwest = { workspace = true, features = ["blocking", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
toml = "0.5.9"
url = "2.4"

[dev-dependencies]
tempfile = "3.9"
