[package]
name = "renegade-relayer"
version = "0.1.0"
edition = "2018"
default-run = "renegade-relayer"

[features]
debug-tui = []
trace-otlp = []
datadog = ["trace-otlp"]

[dependencies]
# === Runtime + Async === #
crossbeam = { workspace = true }
tokio = { workspace = true }

# === Workspace Dependencies === #
api-server = { path = "../workers/api-server" }
arbitrum-client = { path = "../arbitrum-client" }
circuit-types = { path = "../circuit-types" }
chain-events = { path = "../workers/chain-events" }
common = { path = "../common" }
config = { path = "../config" }
external-api = { path = "../external-api" }
gossip-api = { path = "../gossip-api" }
gossip-server = { path = "../workers/gossip-server" }
handshake-manager = { path = "../workers/handshake-manager" }
job-types = { path = "../workers/job-types" }
network-manager = { path = "../workers/network-manager" }
price-reporter = { path = "../workers/price-reporter" }
proof-manager = { path = "../workers/proof-manager" }
state = { path = "../state", features = ["mocks"] }
system-bus = { path = "../system-bus" }
task-driver = { path = "../workers/task-driver" }
util = { path = "../util" }

# === Misc Dependencies === #
clap = { version = "3.2.8", features = ["derive"] }
lazy_static = "1.4"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.21", default-features = false, features = ["trace"] }
opentelemetry-datadog = "0.9"
datadog-tracing = "0.2"
