[package]
name = "renegade-relayer"
version = "0.1.0"
edition = "2018"
default-run = "renegade-relayer"

[features]
dev-metrics = ["task-queue-len", "task-metrics", "proof-metrics"]
metered-channels = ["util/metered-channels"]
task-queue-len = ["state/task-queue-len"]
task-metrics = ["task-driver/task-metrics"]
proof-metrics = ["proof-manager/proof-metrics"]
tx-metrics = ["arbitrum-client/tx-metrics"]

[dependencies]
# === Runtime + Async === #
crossbeam = { workspace = true }
tokio = { workspace = true }

# === Workspace Dependencies === #
api-server = { path = "../workers/api-server" }
arbitrum-client = { path = "../arbitrum-client", features = ["rand"] }
circuit-types = { path = "../circuit-types" }
chain-events = { path = "../workers/chain-events" }
common = { path = "../common" }
constants = { path = "../constants" }
config = { path = "../config" }
external-api = { path = "../external-api" }
gossip-api = { path = "../gossip-api" }
gossip-server = { path = "../workers/gossip-server" }
handshake-manager = { path = "../workers/handshake-manager" }
job-types = { path = "../workers/job-types" }
network-manager = { path = "../workers/network-manager" }
price-reporter = { path = "../workers/price-reporter" }
proof-manager = { path = "../workers/proof-manager" }
state = { path = "../state" }
system-bus = { path = "../system-bus" }
system-clock = { path = "../system-clock" }
task-driver = { path = "../workers/task-driver" }
util = { path = "../util" }
metrics-sampler = { path = "../metrics-sampler" }

# === Misc Dependencies === #
clap = { version = "3.2.8", features = ["derive"] }
ethers = { workspace = true }
lazy_static = { workspace = true }
tracing = { workspace = true }
opentelemetry = { version = "0.21", default-features = false, features = [
    "trace",
] }
