[package]
name = "renegade-relayer"
version = "0.1.0"
edition = "2018"
default-run = "renegade-relayer"

[features]
dev-metrics = ["proof-metrics"]
metered-channels = ["util/metered-channels"]
proof-metrics = ["proof-manager/proof-metrics"]
tx-metrics = ["arbitrum-client/tx-metrics"]

[dependencies]
# === Runtime + Async === #
crossbeam = { workspace = true }
tokio = { workspace = true }

# === Workspace Dependencies === #
api-server = { workspace = true }
arbitrum-client = { workspace = true, features = ["rand"] }
circuit-types = { workspace = true }
chain-events = { workspace = true }
common = { workspace = true }
constants = { workspace = true }
config = { workspace = true }
external-api = { workspace = true }
gossip-api = { workspace = true }
gossip-server = { workspace = true }
handshake-manager = { workspace = true }
job-types = { workspace = true }
network-manager = { workspace = true }
price-reporter = { workspace = true }
proof-manager = { workspace = true }
event-manager = { workspace = true }
state = { workspace = true }
system-bus = { workspace = true }
system-clock = { workspace = true }
task-driver = { workspace = true }
util = { workspace = true }
metrics-sampler = { workspace = true }

# === Misc Dependencies === #
clap = { version = "3.2.8", features = ["derive"] }
ethers = { workspace = true }
lazy_static = { workspace = true }
tracing = { workspace = true }
opentelemetry = { version = "0.21", default-features = false, features = [
    "trace",
] }
