[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.4"
ark-crypto-primitives = { version = "0.4", features = ["sponge"] }
bigdecimal = "0.3"
curve25519-dalek = "2"
itertools = "0.10"
memoize = "0.4"
num-bigint = { version = "0.4", features = ["rand", "serde"] }
rand = { version = "0.8" }
rand_core = "0.5"