[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "elgamal"
harness = false

[[bench]]
name = "poseidon"
harness = false

[dependencies]
# === Cryptography + Arithmetic === #
ark-ff = "0.4"
ark-crypto-primitives = { version = "0.4", features = ["sponge"] }
bigdecimal = "0.3"
mpc-stark = { workspace = true }
num-bigint = { version = "0.4", features = ["rand", "serde"] }

# === Misc Dependencies === #
itertools = "0.10"
lazy_static = "1.4"
memoize = "0.4"
rand = { version = "0.8" }
rand_core = "0.5"
serde = { version = "1.0.139", features = ["serde_derive"] }
serde_json = "1.0"
starknet = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async", "async_tokio"] }