[package]
name = "darkpool-client"
version = "0.1.0"
edition = "2021"

[features]
arbitrum = []
base = []
integration = [
    "dep:rand",
    "circuit-types/test-helpers",
    "circuits/test_helpers",
    "common/mocks",
]

[[test]]
name = "integration"
path = "integration/main.rs"
harness = false
required-features = ["integration"]

[dependencies]
# === Cryptography / Arithmetic === #
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
num-bigint = { workspace = true }
num-traits = "0.2"
ruint = { version = "1.11.1", features = ["num-bigint"] }
mpc-relation = { workspace = true }

# === Blockchain === #
alloy = { workspace = true, features = ["provider-debug-api"] }
alloy-contract = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }

# === Workspace Dependencies === #
constants = { workspace = true }
circuit-types = { workspace = true }
circuits = { workspace = true }
common = { workspace = true }
renegade-crypto = { workspace = true }
util = { workspace = true, features = ["telemetry"] }
renegade-metrics = { workspace = true }

# === Serde === #
serde = { version = "1.0.197" }
serde_with = "3.4"
postcard = { version = "1", features = ["alloc"] }

# === Misc === #
async-trait = "0.1"
itertools = "0.12"
lazy_static = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true, optional = true }

[dev-dependencies]
clap = { version = "4.0", features = ["derive"] }
eyre = { workspace = true }
test-helpers = { workspace = true, features = ["arbitrum"] }
util = { workspace = true }
json = "0.12"
tokio = { workspace = true }
colored = "2"
inventory = "0.3"
mpc-plonk = { workspace = true }
