[package]
name = "darkpool-client"
version = "0.1.0"
edition = "2021"

[features]
default = []
arbitrum = ["dep:serde_with", "dep:postcard"]
base = ["dep:renegade-solidity-abi"]
all-chains = ["arbitrum", "base"]
integration = [
    "dep:rand",
    "circuit-types/test-helpers",
    "circuits/test_helpers",
    "common/mocks",
    "test-helpers/arbitrum",
]

[[test]]
name = "integration"
path = "integration/main.rs"
harness = false
required-features = ["integration"]

[dependencies]
# === Cryptography / Arithmetic === #
ark-bn254 = { version = "0.4.0" }
ark-ec = { version = "0.4.0" }
ark-ff = "0.4.0"
num-bigint = { workspace = true }
num-traits = "0.2"
ruint = { version = "1.11.1", features = ["num-bigint"] }

# === Blockchain === #
alloy = { workspace = true, features = ["provider-debug-api"] }
alloy-contract = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }

# === Workspace Dependencies === #
constants = { workspace = true }
circuit-types = { workspace = true }
circuits = { workspace = true }
common = { workspace = true }
renegade-crypto = { workspace = true }
renegade-solidity-abi = { package = "abi", git = "https://github.com/renegade-fi/renegade-solidity-contracts", optional = true }
util = { workspace = true, features = ["telemetry"] }

# === Serde === #
serde = { version = "1.0.197" }
serde_with = { version = "3.4", optional = true }
postcard = { version = "1", features = ["alloc"], optional = true }

# === Misc === #
async-trait = "0.1"
itertools = "0.12"
lazy_static = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true, optional = true }

[dev-dependencies]
clap = { version = "4.0", features = ["derive"] }
eyre = { workspace = true }
test-helpers = { workspace = true }
util = { workspace = true }
tokio = { workspace = true }
colored = "2"
inventory = "0.3"
mpc-plonk = { workspace = true }
