[package]
name = "external-api"
version = "0.1.0"
edition = "2021"

[features]
auth = ["http", "thiserror"]

[dependencies]
# === Arithmetic === #
num-bigint = { workspace = true }

# === Auth Dependencies === #
http = { version = "0.2.12", optional = true }
thiserror = { version = "1.0.61", optional = true }

# === Workspace Dependencies === #
circuit-types = { path = "../circuit-types" }
common = { path = "../common" }
constants = { path = "../constants" }
renegade-crypto = { path = "../renegade-crypto" }
util = { path = "../util" }

# === Misc Dependencies === #
base64 = "0.22.1"
ethers = { workspace = true }
itertools = { workspace = true }
hex = "0.4"
serde = { workspace = true }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }

[dev-dependencies]
rand = "0.8.5"
num-traits = "0.2.15"
