[package]
name = "external-api"
version = "0.1.0"
edition = "2021"

[features]
default = ["full-api"]
auth = ["http", "thiserror", "common/hmac"]
external-match-api = []
admin-api = []
network-api = []
order-book-api = []
task-api = []
wallet-api = []
full-api = [
    "common/default",
    "circuit-types/default",
    "external-match-api",
    "admin-api",
    "network-api",
    "order-book-api",
    "task-api",
    "wallet-api",
]

[dependencies]
# === Arithmetic === #
num-bigint = { workspace = true }

# === Auth Dependencies === #
http = { version = "0.2.12", optional = true }
thiserror = { version = "1.0.61", optional = true }

# === Workspace Dependencies === #
circuit-types = { path = "../circuit-types", default-features = false }
common = { path = "../common", default-features = false }
constants = { path = "../constants", default-features = false }
renegade-crypto = { path = "../renegade-crypto" }
util = { path = "../util", default-features = false }

# === Misc Dependencies === #
base64 = "0.22.1"
ethers = { workspace = true }
hex = "0.4"
itertools = { workspace = true }
num-traits = "0.2.15"
serde = { workspace = true }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }

[dev-dependencies]
rand = "0.8.5"
num-traits = "0.2.15"
