[package]
name = "external-api"
version = "0.1.0"
edition = "2024"

[features]
default = ["full-api"]
auth = ["http", "thiserror", "common/hmac"]
external-match-api = []
admin-api = []
network-api = []
order-book-api = []
task-api = []
wallet-api = []
full-api = [
    "common/default",
    "circuit-types/default",
    "external-match-api",
    "admin-api",
    "network-api",
    "order-book-api",
    "task-api",
    "wallet-api",
]

[dependencies]
# === Arithmetic === #
num-bigint = { workspace = true }

# === Auth Dependencies === #
http = { workspace = true, optional = true }
thiserror = { version = "1.0.61", optional = true }

# === Workspace Dependencies === #
circuit-types = { workspace = true }
common = { workspace = true }
constants = { workspace = true }
renegade-crypto = { workspace = true }
util = { workspace = true }

# === Misc Dependencies === #
alloy = { workspace = true }
base64 = "0.22.1"
hex = "0.4"
itertools = { workspace = true }
num-traits = "0.2.15"
serde = { workspace = true }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }

[dev-dependencies]
rand = "0.8.5"
num-traits = "0.2.15"
constants = { workspace = true }
