[package]
name = "external-events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring-channel = "0.11.0"
serde = "1.0.139"
serde_json = "1.0"
tungstenite = { version = "0.18.0", features = ["native-tls"] }
url = "2.3.1"
