[package]
name = "gossip-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# === Cryptography === #
ed25519-dalek = { version = "1.0.1" }

# === Workspace Dependencies === #
circuit-types = { path = "../circuit-types" }
common = { path = "../common" }

# === Misc Dependencies === #
libp2p = { workspace = true }
protobuf = "2.0"
raft = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
