[package]
name = "gossip-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# === Cryptography === #
ed25519-dalek = { version = "1.0.1" }

# === Workspace Dependencies === #
circuit-types = { path = "../circuit-types" }
common = { path = "../common" }
util = { path = "../util" }

# === Misc Dependencies === #
libp2p = { workspace = true }
openraft = "0.9"
protobuf = "2.0"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
