[package]
name = "metrics-sampler"
version = "0.1.0"
edition = "2021"

[dependencies]
# === Workspace Dependencies === #
state = { path = "../state" }
system-clock = { path = "../system-clock" }
common = { path = "../common" }
job-types = { path = "../workers/job-types" }
util = { path = "../util" }

# === Misc === #
metrics = { workspace = true }
futures = { workspace = true }
num-bigint = { workspace = true }
