[package]
name = "metrics-sampler"
version = "0.1.0"
edition = "2024"

[dependencies]
# === Workspace Dependencies === #
state = { workspace = true }
system-clock = { workspace = true }
common = { workspace = true }
job-types = { workspace = true }
util = { workspace = true }

# === Misc === #
metrics = { workspace = true }
futures = { workspace = true }
num-bigint = { workspace = true }
