[package]
name = "mock-node"
version = "0.1.0"
edition = "2024"
description = "A mock relayer for testing"

[dependencies]
# === Runtime + Networking === #
futures = { workspace = true }
libp2p = { workspace = true }
tokio = { workspace = true, features = ["rt"] }

# === Workspace Dependencies === #
api-server = { workspace = true }
darkpool-client = { workspace = true }
circuit-types = { workspace = true }
chain-events = { workspace = true }
common = { workspace = true }
config = { workspace = true }
external-api = { workspace = true }
gossip-api = { workspace = true }
gossip-server = { workspace = true }
handshake-manager = { workspace = true }
job-types = { workspace = true }
network-manager = { workspace = true }
price-reporter = { workspace = true, features = ["mocks"] }
price-state = { workspace = true }
proof-manager = { workspace = true, features = ["mocks"] }
state = { workspace = true, features = ["mocks"] }
system-bus = { workspace = true }
system-clock = { workspace = true }
task-driver = { workspace = true }
test-helpers = { workspace = true, features = ["mpc-network", "mocks"] }
util = { workspace = true }

# === Misc Dependencies === #
alloy = { workspace = true }
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
eyre = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
