[package]
name = "renegade-crypto"
version = "0.1.0"
edition = "2021"

[features]
default = ["non-wasm"]
# We define a feature flag that gates all uses of wasm incompatible dependencies
# specifically for use in stylus contracts
non-wasm = ["dep:ark-mpc", "dep:rand", "constants/mpc-types", "inline"]
inline = []

[[bench]]
name = "elgamal"
harness = false
required-features = ["non-wasm"]

[[bench]]
name = "poseidon"
harness = false
required-features = ["non-wasm"]

[dependencies]
# === Cryptography + Arithmetic === #
ark-ec = "0.4"
ark-ff = "0.4"
ark-mpc = { workspace = true, optional = true }
bigdecimal = "0.3"
num-bigint = { version = "0.4", features = ["rand", "serde"] }

# === Workspace Dependencies === #
constants = { path = "../constants", default-features = false }

# === Misc Dependencies === #
itertools = "0.10"
lazy_static = "1.4"
rand = { version = "0.8", optional = true }
serde = { version = "1.0.139", features = ["serde_derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["async", "async_tokio"] }
zkhash = { git = "https://github.com/HorizenLabs/poseidon2.git" }
