[package]
name = "renegade-metrics"
version = "0.1.0"
edition = "2021"

[features]
task-metrics = []
proof-metrics = []
tx-metrics = []

[dependencies]
# === Telemetry === #
tracing = { workspace = true }
metrics = { workspace = true }

# === Cryptography / Arithmetic === #
num-bigint = { workspace = true }
atomic_float = "1"

# === Workspace Dependencies === #
circuit-types = { workspace = true }
util = { workspace = true }
common = { workspace = true }

# === Misc === #
lazy_static = { workspace = true }
