[package]
name = "starknet-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# === Cryptographic + arithmetic dependencies === #
ark-ff = "0.4"
mpc-bulletproof = { workspace = true }
mpc-stark = { workspace = true }
num-bigint = { version = "0.4.3" }

# === Networking + Blockchain dependencies === #
starknet = { workspace = true }
reqwest = "0.11.13"

# === Workspace Dependencies === #
circuits = { path = "../circuits" }
circuit-types = { path = "../circuit-types" }
common = { path = "../common" }
constants = { path = "../constants" }
renegade-crypto = { path = "../renegade-crypto" }
state = { path = "../state" }

# === Misc dependencies === #
itertools = "0.10.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
