[package]
name = "state"
version = "0.1.0"
edition = "2021"

[features]
# Used to enable mocks from other crates in tests
all-tests = ["common/mocks"]
mocks = ["dep:tempfile", "dep:test-helpers"]
task-queue-len = []

[[bench]]
name = "storage"
harness = false
required-features = ["mocks"]

[[bench]]
name = "applicator"
harness = false
required-features = ["mocks"]

[[bench]]
name = "interface"
harness = false
required-features = ["mocks"]

[dependencies]

# === Replication === #
openraft = { version = "0.9", features = ["serde", "storage-v2"] }

# === Storage === #
bincode = "1.3"
flate2 = "1.0"
libmdbx = "0.3"
serde = { workspace = true, features = ["derive"] }

# === Messaging + Concurrency === #
crossbeam = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }

# === Workspace Dependencies === #
circuit-types = { path = "../circuit-types" }
common = { path = "../common" }
config = { path = "../config" }
constants = { path = "../constants" }
external-api = { path = "../external-api" }
gossip-api = { path = "../gossip-api" }
job-types = { path = "../workers/job-types" }
system-bus = { path = "../system-bus" }
system-clock = { path = "../system-clock" }
util = { path = "../util" }
test-helpers = { path = "../test-helpers", optional = true }
renegade-metrics = { path = "../renegade-metrics" }

# === Misc === #
async-trait = { workspace = true }
crossterm = "0.27"
itertools = "0.10"
fxhash = "0.2"
lazy_static = { workspace = true }
libp2p = { workspace = true }
rand = "0.8"
serde_json = "1.0"
slog = { version = "2.2", features = ["max_level_trace"] }
tempfile = { version = "3.8", optional = true }
tracing = { workspace = true, features = ["log"] }
tracing-slog = "0.2"
tui = "0.19"
tui-logger = "0.8"
uuid = "1.1.2"
metrics = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async", "async_tokio"] }
multiaddr = "0.17"
num-bigint = "0.4"
tempfile = "3.8"
rand = { workspace = true }
uuid = "1.4"
test-helpers = { path = "../test-helpers" }
tokio-stream = "0.1"

# Silence config warnings for testing
config = { path = "../config", features = ["silent"] }
