[package]
name = "state"
version = "0.1.0"
edition = "2021"

[features]
# Used to enable mocks from other crates in tests
mocks = ["dep:tempfile", "dep:test-helpers"]
ci = ["mocks"]

[[bench]]
name = "storage"
harness = false
required-features = ["mocks"]

[[bench]]
name = "applicator"
harness = false
required-features = ["mocks"]

[[bench]]
name = "interface"
harness = false
required-features = ["mocks"]

[dependencies]

# === Replication === #
openraft = { version = "=0.9.13", features = ["serde", "storage-v2"] }

# === Storage === #
bincode = "1.3"
ciborium = "0.2"
flate2 = "1.0"
libmdbx = "0.3"
serde = { workspace = true, features = ["derive"] }

# === Messaging + Concurrency === #
crossbeam = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }

# === Workspace Dependencies === #
circuit-types = { workspace = true }
common = { workspace = true }
config = { workspace = true }
constants = { workspace = true }
external-api = { workspace = true }
gossip-api = { workspace = true }
job-types = { workspace = true }
system-bus = { workspace = true }
system-clock = { workspace = true }
util = { workspace = true }
test-helpers = { workspace = true, optional = true, features = ["mocks"] }
renegade-metrics = { workspace = true }

# === Misc === #
async-trait = { workspace = true }
crossterm = "0.27"
itertools = "0.10"
fxhash = "0.2"
lazy_static = { workspace = true }
libp2p = { workspace = true }
rand = "0.8"
serde_json = "1.0"
slog = { version = "2.2", features = ["max_level_trace"] }
tempfile = { version = "3.8", optional = true }
thiserror = "2.0"
tracing = { workspace = true, features = ["log"] }
tracing-opentelemetry = { workspace = true }
tracing-slog = "0.2"
tui = "0.19"
tui-logger = "0.8"
uuid = "1.1.2"
metrics = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async", "async_tokio"] }
multiaddr = "0.17"
num-bigint = "0.4"
num-traits = "0.2"
tempfile = "3.8"
rand = { workspace = true }
uuid = "1.4"
test-helpers = { workspace = true, features = ["mocks"] }
tokio-stream = "0.1"

# Silence config warnings for testing
config = { workspace = true, features = ["silent"] }
