[package]
name = "statev2"
version = "0.1.0"
edition = "2021"

[dependencies]

# === Replication === #
raft = "0.7"

# === Storage === #
flexbuffers = "2.0"
libmdbx = "0.3"
protobuf = "2.0"
serde = { workspace = true, features = ["derive"] }

# === Misc === #
slog = "2.2"
tracing = { workspace = true }
tracing-slog = "0.2"

[dev-dependencies]
tempfile = "3.8"
rand = { workspace = true }
