[package]
name = "statev2"
version = "0.1.0"
edition = "2021"

[features]
# Used to enable mocks from other crates in tests
all-tests = ["common/mocks"]
mocks = ["dep:tempfile"]

[dependencies]

# === Replication === #
raft = "0.7"

# === Storage === #
flexbuffers = "2.0"
libmdbx = "0.3"
protobuf = "2.0"
serde = { workspace = true, features = ["derive"] }

# === Messaging + Concurrency === #
crossbeam = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }

# === Workspace Dependencies === #
circuit-types = { path = "../circuit-types" }
common = { path = "../common" }
config = { path = "../config" }
constants = { path = "../constants" }
external-api = { path = "../external-api" }
system-bus = { path = "../system-bus" }
util = { path = "../util" }

# === Misc === #
itertools = "0.10"
libp2p = { workspace = true }
rand = "0.8"
serde_json = "1.0"
slog = { verison = "2.2", features = ["max_level_trace"] }
tempfile = { version = "3.8", optional = true }
tracing = { workspace = true, features = ["log"] }
tracing-slog = "0.2"
uuid = "1.1.2"

[dev-dependencies]
multiaddr = "0.17"
num-bigint = "0.4"
tempfile = "3.8"
rand = { workspace = true }
uuid = "1.4"
