[package]
name = "system-clock"
version = "0.1.0"
edition = "2021"

[features]
ci = []

[dependencies]
# === Runtime Dependencies === #
tokio = { workspace = true }
tokio-cron-scheduler = "0.10"

# === Workspace Dependencies === #
util = { workspace = true }

# === Misc Dependencies === #
tracing = { workspace = true }
