[package]
name = "task-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
# === Async + Runtime === #
async-trait = "0.1.60"
crossbeam = "0.8"
tokio = { workspace = true }

# === Cryptography === #
curve25519-dalek = { workspace = true }
mpc-stark = { workspace = true }
num-bigint = { workspace = true }

# === Workspace Dependencies === #
circuits = { path = "../circuits" }
circuit-types = { path = "../circuit-types" }
common = { path = "../common" }
renegade-crypto = { path = "../renegade-crypto" }
external-api = { path = "../external-api" }
gossip-api = { path = "../gossip-api" }
job-types = { path = "../workers/job-types" }
starknet-client = { path = "../starknet-client" }
state = { path = "../state" }
system-bus = { path = "../system-bus" }

# === Misc Dependencies === #
itertools = "0.11"
serde = { workspace = true }
starknet = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
